--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,18 +2,13 @@
     <string name="app_name">MaintaiNUS</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="title_activity_login">Login</string>
-
-    <!-- Strings related to login -->
-    <string name="prompt_email">Email</string>
-    <string name="prompt_password">Password (optional)</string>
-    <string name="action_sign_in">Sign in or register</string>
-    <string name="action_sign_in_short">Sign in</string>
-    <string name="error_invalid_email">This email address is invalid</string>
-    <string name="error_invalid_password">This password is too short</string>
-    <string name="error_incorrect_password">This password is incorrect</string>
-    <string name="error_field_required">This field is required</string>
-    <string name="permission_rationale">"Contacts permissions are needed for providing email
-        completions."
-    </string>
+    <!--<string name="hostel_1">Tembusu College</string>-->
+    <!--<string name="hostel_2">Cinnamon College</string>-->
+    <!--<string name="hostel_3">CAPT</string>-->
+    <!--<string name="hostel_4">Residential College 4</string>-->
+    <!--<string name="hostel_5">PGP Residences</string>-->
+    <!--<string name="hostel_6">UTown Residences</string>-->
     <string name="title_activity_logout_page">LogoutPage</string>
+    <string name="title_activity_complaint_form">ComplaintForm</string>
+    
 </resources>
